--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,14 @@ body {
     border-radius: .25rem;
 }
 
+.p-left-0 {
+    padding: .5rem .5rem .5rem 0;
+}
+
+.p-right-0 {
+    padding: .5rem 0 .5rem .5rem;
+}
+
 .avengers-banner {
     height: 20vh;
     background: url("../images/shutterstock_1328369057-avengers-logo-removebg.png") center center/contain no-repeat;
