--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,16 @@ html, body {
   padding:0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     background-color: #3268BD;
     font-family: 'Comic Neue', cursive;
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 140px;
 }
 
 .navbar {
@@ -26,9 +33,10 @@ body {
 }
 
 .footer-section {
-    height: 140px;
+    height: 120px;
     background-color: #e9ecef;
-    margin-top: 40px;
+    position: absolute;
+    left: 0 ; right: 0; bottom: 0;
 }
 
 .footer-info {
@@ -89,4 +97,3 @@ body {
     height: 20vh;
     background: url("../images/shutterstock_1328369057-avengers-logo-removebg.png") center center/contain no-repeat;
 }
-
