--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,9 +111,20 @@ body {
 }
 
 .memory-card {
-    width: calc(17% - 10px);
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
     margin: 5px;
     position: relative;
     box-shadow: 0 6px 6px -6px #000;
     border-radius: .25rem;
+    background-image: radial-gradient(circle, lightblue, darkblue);
+    border: solid 2px #000;
+}
+
+.front-face,
+.back-face {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
 }
