--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,12 +103,12 @@ body {
     display: flex;
     margin: auto;
     padding: 5px;
-    /* height: 640px; */
     border: solid 2px #000;
     background-image: radial-gradient(circle, yellow, orange);
     box-shadow: 0 6px 6px -6px #000;
     border-radius: .25rem;
     justify-content: center;
+    perspective: 1000px;
 }
 
 .memory-card {
@@ -120,12 +120,30 @@ body {
     border-radius: .25rem;
     background-image: radial-gradient(circle, lightblue, darkblue);
     border: solid 2px #000;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .8s;
+}
+
+.memory-card:active {
+    transform: scale(0.97);
+    transition: .2s;
+}
+
+.memory-card.flip {
+    transform: rotateY(180deg);
+    transition: .8s;
 }
 
 .front-face,
 .back-face {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 10px;
     position: absolute;
+    backface-visibility: hidden;
+}
+
+.front-face {
+    transform: rotateY(180deg);
 }
