container max width to ensure content is only 6 game cards wide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ body {
     padding-bottom: 140px;
 }
 
+.container-max-width {
+    max-width: 700px;
+}
+
 .bangers-font {
     font-family: 'Bangers', cursive;
 }
