--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,3 +299,19 @@ body {
 .btn-hard {
     background-image: radial-gradient(circle, lightcoral, darkred);
 }
+
+/* Audio Modal */
+.btn-primary {
+    border: 1px solid black;
+}
+
+.toggle-handle {
+    border: 1px solid black;
+    background-color: #fff;
+}
+
+.toggle-off {
+    color:  #333;
+    background-color: #e6e6e6;
+    border: 1px solid black;
+}
