--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,17 @@ body {
     border-radius: .25rem;
 }
 
+.text-box-lg {
+    background-image: radial-gradient(circle, yellow, orange);
+    border: solid 2px #000;
+    font-weight: 700;
+    padding: 6px 12px;
+    border-radius: .25rem;
+    min-height: 200px;
+    margin-bottom: 10px;
+}
+
+
 .p-left-0 {
     padding: .5rem .5rem .5rem 0;
 }
