--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,16 +94,6 @@ body {
     border-radius: .25rem;
 }
 
-.text-box-lg {
-    background-image: radial-gradient(circle, yellow, orange);
-    border: solid 2px #000;
-    font-weight: 700;
-    padding: 6px 12px;
-    border-radius: .25rem;
-    min-height: 200px;
-    margin-bottom: 10px;
-}
-
 
 .p-left-0 {
     padding: .5rem .5rem .5rem 0;
@@ -347,4 +337,35 @@ body {
 
 #sound-label {
     margin-right: 5px;
+}
+
+/* Avengers Bio Page */
+
+.img-box {
+    border: solid 2px #000;
+    padding: 6px 12px;
+    border-radius: .25rem;
+    height: 290px;
+    margin-bottom: 10px;
+} 
+
+.img-box-blue {
+    background-image: radial-gradient(circle, lightblue, darkblue);
+}
+
+.text-box-lg {
+    background-image: radial-gradient(circle, yellow, orange);
+    border: solid 2px #000;
+    font-weight: 700;
+    padding: 6px 12px;
+    border-radius: .25rem;
+    min-height: 250px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.avenger-captainamerica {
+    background: url('../images/captain-america-bio.png') no-repeat center;
+    background-size: cover;
+    height: 100%;
 }
