groot and hawkeye added to bio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,3 +387,15 @@ body {
     background-size: cover;
     height: 100%;
 }
+
+.avenger-groot {
+    background: url('../images/groot-bio.png') no-repeat center;
+    background-size: cover;
+    height: 100%;
+}
+
+.avenger-hawkeye {
+    background: url('../images/hawkeye-bio.png') no-repeat center;
+    background-size: cover;
+    height: 100%;
+}
