--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,6 @@ body {
     border: solid 2px #000;
     background-image: radial-gradient(circle, yellow, orange);
     box-shadow: 0 6px 6px -6px #000;
-    border-radius: .25rem;
     justify-content: center;
     perspective: 1000px;
     min-height: 320px;
@@ -292,15 +291,27 @@ body {
     background-image: radial-gradient(circle, lightcyan, darkcyan);
     font-weight: 600;
     border: solid 2px black;
+    box-shadow: 0 6px 6px -6px #000;
+    border-radius: 0;
+    transform: skew(-5deg);
 }
 
 .modal-title {
     font-size: 170%;
+    transform: skew(5deg);
 }
 
 .modal-header,
 .modal-footer {
     border: 0;
+}
+
+.modal-header {
+    transform: skew(5deg);
+}
+
+.modal-body {
+    transform: skew(5deg);
 }
 
 .btn-easy {
@@ -360,18 +371,18 @@ body {
     border: solid 2px #000;
     font-weight: 700;
     padding: 6px 12px;
-    border-radius: .25rem;
     min-height: 290px;
     margin-bottom: 10px;
     text-align: center;
+    box-shadow: 0 6px 6px -6px #000;
 }
 
 .img-box {
     border: solid 2px #000;
     padding: 6px 12px;
-    border-radius: .25rem;
     height: 290px;
     margin-bottom: 10px;
+    box-shadow: 0 6px 6px -6px #000;
 } 
 
 .img-box-blue {
