mobile card flip bug - preserve 3D updated - test 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,8 @@ body {
     height: 100%;
     width: 100%;
     pointer-events: none;
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
 }
 
 .back-face {
