--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,10 @@ body {
     pointer-events: none;
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
+    -webkit-perspective: 0;
+            perspective: 0;
+    -webkit-transform: translate3d(0,0,0);
+            transform: translate3d(0,0,0);
 }
 
 .back-face {
