--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,7 @@ body {
 .front-face {
     -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
+    opacity: 0.99;
 }
 
 .easyavenger1,
