--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,8 @@ body {
 
 /* Navbar Styling */
 .navbar {
-    box-shadow: 0 6px 6px -6px #000;
+    -webkit-box-shadow: 0 6px 6px -6px #000;
+            box-shadow: 0 6px 6px -6px #000;
 }
 .navbar-brand {
     padding-top: 0;
@@ -69,6 +70,8 @@ body {
     background-color: #e9ecef;
     position: absolute;
     left: 0 ; right: 0; bottom: 0;
+    -webkit-box-shadow: 0 -6px 6px -6px #000;
+            box-shadow: 0 -6px 6px -6px #000;
 }
 
 .footer-info {
@@ -188,8 +191,8 @@ body {
     transition: .8s;
 }
 
-.card-light-blue {
-    background-color: lightskyblue;
+.card-m-orchid {
+    background-color: mediumorchid;
 }
 
 .front-face,
